@@ -1,5 +1,0 @@
-#!/usr/bin/env python2.2
-
-from peak.running import commands
-commands.runMain( commands.Bootstrap )
-
